<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/menu" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/favourites" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/navication_cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart"/>

</menu>