<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".Register">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:bottomRightRadius="100dp"
        app:cardBackgroundColor="#34536A"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">
        <ImageView
            android:id="@+id/ssimg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="-20dp"
            android:paddingHorizontal="0dp"
            android:src="@drawable/img_6"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/let_s_get_you_registered"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="420dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">


        <TextView
            android:id="@+id/loginlnk"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:text="Login"
            android:textAlignment="center"
            android:textColor="@color/btnclr"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lnkregsrt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_weight="0"
            android:background="@drawable/switchsolider"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ExtraText" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="210dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/etbtns"
        android:hint="Your name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#3E3B3B"
        android:textSize="15sp" />

    <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/et_name"
            android:textColorHint="#3E3B3B"
            android:background="@drawable/etbtns"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/etbtns"
            android:textColorHint="#3E3B3B"
            android:layout_below="@id/et_email"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/etbtns"
            android:layout_below="@id/et_password"
            android:hint="Retype password"
            android:textColorHint="#3E3B3B"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="15sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:layout_below="@id/et_repassword"
        android:layout_marginTop="0dp">


        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:max="100"
            android:progress="100"
            android:progressTint="@color/black"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="367dp"
            android:layout_height="64dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#172247"
            android:text="Register"
            android:textColor="@android:color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/txtreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_register"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="10dp"
            android:text="____________ Or login with  ____________" />


        <LinearLayout
            android:id="@+id/fbgogline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtreg"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fbreg"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_below="@id/btn_register"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/fbgbag"
                android:padding="10dp"
                android:src="@drawable/fcbc" />

            <ImageView
                android:id="@+id/gogoglerg"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_below="@id/btn_register"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/fbgbag"
                android:padding="10dp"
                android:src="@drawable/googleimg" />
            <ImageView
                android:id="@+id/instaic"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_below="@id/btn_register"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/fbgbag"
                android:padding="10dp"
                android:src="@drawable/insta" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fbgogline"
            android:layout_marginStart="70dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="-236dp"
            android:text="Already you have an login?"
            android:textColor="@color/btnclr"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fbgogline"
            android:layout_marginStart="230dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="-226dp"
            android:text="Register Now"
            android:textColor="#E63011"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>